# worldmodel.cu

./: .gitignore  CMakeLists.txt  README.md  export_seed_latent.py  generate_smoke.py  test_standalone_probe.py  test_vae_encoder_parity.py  test_vulkan_gemm_cta.py  test_vulkan_sparse_gqa_fmha.py  test_worldmodel_kernels.py  worldmodel_kernels.cu
docs/: cuda_cutlass_kernels.md  cuda_w8a8_optimization.md  vulkan_optimization.md
shaders/vulkan/: ada_rms_norm_f16.comp  ada_rms_norm_f32.comp  add_bias_silu_f32.comp  add_channel_silu_f16.comp  add_channel_silu_f32.comp  add_f32.comp  cache_frame_indices.comp  cast_f32_to_f16.comp  fill_rgba.comp  gated_residual_add_f32.comp  gemm_cache_flush.comp  gemm_cta_m64n128k32_f16_gated.comp  gemm_cta_m64n128k32_f16_gated_p2.comp  gemm_cta_m64n128k32_f16_none.comp  gemm_cta_m64n128k32_f16_none_p2.comp  gemm_cta_m64n128k32_f16_silu.comp  gemm_cta_m64n128k32_f16_silu_p2.comp  gemm_cta_m64n128k32_f16_splitk.comp  gemm_cta_m64n128k32_f16_splitk_p2.comp  gemm_cta_m64n128k64_f16_gated.comp  gemm_cta_m64n128k64_f16_none.comp  gemm_cta_m64n128k64_f16_silu.comp  gemm_cta_m64n64k32_f16_gated.comp  gemm_cta_m64n64k32_f16_gated_p2.comp  gemm_cta_m64n64k32_f16_none.comp  gemm_cta_m64n64k32_f16_none_p2.comp  gemm_cta_m64n64k32_f16_silu.comp  gemm_cta_m64n64k32_f16_silu_p2.comp  gemm_cta_m64n64k32_f16_splitk.comp  gemm_cta_m64n64k32_f16_splitk_p2.comp  gemm_cta_m64n64k64_f16_gated.comp  gemm_cta_m64n64k64_f16_none.comp  gemm_cta_m64n64k64_f16_silu.comp  gemm_cta_wf16_coopmat_template.comp  gemm_f16x_wf16_gated_n16.comp  gemm_f16x_wf16_gated_n32.comp  gemm_f16x_wf16_gated_n8.comp  gemm_f16x_wf16_n16.comp  gemm_f16x_wf16_n32.comp  gemm_f16x_wf16_n8.comp  (+75 more)
src/: safetensors.c  safetensors.h  world_backend.h  world_cli.c  world_config.c  world_config.h  world_control.h  world_cuda.cu  world_cuda.h  world_cuda_gemm_probe.cu  world_cuda_internal.cuh  world_cuda_ops.cu  world_cuda_ops.cuh  world_cuda_vae.cu  world_cuda_vae.cuh  world_cuda_vae_ops.cu  world_cuda_vae_ops.cuh  world_model.h  world_raylib.c  world_sparse_fmha.cuh  world_vulkan.c  world_vulkan.h  world_vulkan_gemm_autotune.c  world_vulkan_probe.c  world_weights.c  world_weights.h
tests/: test_safetensors.c  test_world_config.c
tests/w8a8/: CMakeLists.txt  README.md
tools/: CMakeLists.txt  README.md
tools/profile/: README.md  cuda_runtime.py  w8a8.cu  world_cuda_probe.cu  world_cuda_probe.h  world_cuda_probe_cli.c
tools/reference/: export_seed_latent.py  generate_smoke.py
tools/tests/: cuda_experimental_torch.cu  cuda_ops_torch.cu  cuda_vae_ops_torch.cu  test_cuda_experimental.py  test_cuda_ops.py  test_cuda_runtime.py  test_cuda_vae_encoder.py  test_cuda_vae_ops.py  test_w8a8_quantization.py  test_world_control.c
